--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "redux",
   "version": "0.1.0",
-  "homepage": "https://tltson299.github.io/redux-burger/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -18,9 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
